--- a/style.css
+++ b/style.css
@@ -26,3 +26,14 @@
 #london{
   background-image: url(london.jpg);
 }
+
+
+.container > span{
+  top: 50%;
+  left: 50%;
+  color:white;
+  font-size: 80px;
+  position:absolute;
+  transform: translate(-50%, -50%);
+  font-weight: bold;
+}
