--- a/style.css
+++ b/style.css
@@ -37,3 +37,11 @@
   transform: translate(-50%, -50%);
   font-weight: bold;
 }
+
+.filter{
+  background: #000;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.5;
+}
